--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,116 @@
-.App {
-  text-align: center;
-}
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
+}
+
+.footer{
+
+  position: absolute;
+  bottom: 0;
+  background-color: skyblue;
+  text-align: center;
+  width: 100%;
+}
+.appbutton{
+
+  margin: 10px;
+  padding: 12px;
+  width: 100px;
+  background-color: lightskyblue;
+  border: 1px solid;
+  cursor: pointer;
+}
+
+.register{
+
+  margin-left: 30%;
+}
+.login{
+
+  margin-left: 30%;
+  margin-top: 100px;
+
+}
+
+.logo{
+
+  width: 45px;
+    float: left;
+    border-radius: 50%;
+    margin-top: 3px;
+    margin-left: 30px;
+
+
+}
+.product-list{
+
+  text-align: center;
+  margin-top: 50px;
+
+}
+.product-list ul li{
+
+  display: inline-block;
+  border: 1px solid skyblue;
+  padding: 5px;
+  width: 150px;
+}
+.product-list ul{
+
+  margin: 0px;
+}
+
+.search-box{
+
+  height: 30px;
+    border: 1px solid skyblue;
+    margin-bottom: 10px;
+
+
+}
+
+.nav-right{
+
+  text-align: right;
+}
+
+.inputBox{
+  display: block;
+  margin: 10px;
+  padding: 7px;
+  width: 300px;
+  border: 1px solid #61dafb;
+
+
+}
+
+.nav-ul li {
+
+  
+  display: inline-block;
+  padding: 10px;
+
+
+}
+
+.nav-ul{
+
+  padding: 5px;
+  margin: 0;
+  background-color: PLUM;
+
+}
+
+.nav-ul li a{
+
+  color: mintcream;
+  text-decoration: none;
+  padding: 5px;
+
 }
 
 .App-header {
